# deep_research_skills

./: .gitignore  AGENTS.md  README.md  langgraph.json  pyproject.toml
docs/: evaluation.md  scoping_evaluation.md
examples/: README.md  deepseek-360.md  iceland-self-drive.md  run_example.py
scripts/: _eval_retry.py
scripts/research_agent/: fetch_last_research_eval.py  run_research_eval.py  upload_research_dataset.py
scripts/scoping/: fetch_last_eval.py  run_scoping_eval.py  upload_scoping_dataset.py
scripts/supervisor/: fetch_last_supervisor_eval.py  run_supervisor_eval.py  upload_supervisor_dataset.py
src/deep_research/: __init__.py  model_config.py  multi_agent_supervisor.py  prompts.py  research_agent_full.py  research_agent_scope.py  research_agent_skills.py  skills_loader.py  state_multi_agent_supervisor.py  state_research.py  state_scope.py  structured_output_fallback.py  utils.py
src/deep_research/skills/: academic-research.md  news-timeline.md  people-research.md  product-comparison.md
tests/: test_eval_retry.py  test_prompts_encoding.py  test_research_agent_scope.py  test_research_agent_skills.py  test_skills_loader.py  test_utils.py
